--- a/index.html
+++ b/index.html
@@ -1,25 +1,62 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Wolfdetrix.github.io by wolfdetrix</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Wolf Detrix</title>
+    <meta name="description" content="DJ/Producer">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Wolfdetrix.github.io</h1>
-        <p>Website for Wolf Detrix</p>
-      </header>
-    </div>
-    
-  </body>
+</head>
+
+<body>
+    <img class="background-full" src="images/wolf-bg.jpg" />
+
+    <header id="header" class="content-wrapper">
+        <div>
+            <h1>
+                Wolf<br>
+                Detrix
+            </h1>
+            <h2>DJ/Producer</h2>
+        </div>
+    </header>
+    <footer id="footer" class="content-wrapper">
+        <div>
+            <ul>
+                <li>
+                    Twitter: <a href="http://twitter.com/wolfdetrix">@WolfDetrix</a>
+                </li>
+                <li>
+                    Facebook: <a href="http://facebook.com/wolfdetrix">/WolfDetrix</a>
+                </li>
+                <li>
+                    SoundCloud: <a href="http://soundcloud.com/wolfdetrix">/WolfDetrix</a>
+                </li>
+                <li>
+                    TheDJList: <a href="http://thedjlist.com/djs/WOLF_DETRIX/">djs/WOLF_DETRIX/</a>
+                </li>
+                <li>
+                    Beatport: <a href="http://dj.beatport.com/wolfdetrix">dj.beatport.com/wolfdetrix</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+
+    <script>
+        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+        e.src='//www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+        ga('create','UA-XXXXX-X');ga('send','pageview');
+    </script>
+
+</body>
+
 </html>
