Updated Links to names

--- a/index.html
+++ b/index.html
@@ -30,19 +30,22 @@
         <div>
             <ul>
                 <li>
-                    Twitter: <a href="http://twitter.com/wolfdetrix">@WolfDetrix</a>
+                    Follow Me:
                 </li>
                 <li>
-                    Facebook: <a href="http://facebook.com/wolfdetrix">/WolfDetrix</a>
+                    <a href="http://twitter.com/wolfdetrix">Twitter</a>
                 </li>
                 <li>
-                    SoundCloud: <a href="http://soundcloud.com/wolfdetrix">/WolfDetrix</a>
+                    <a href="http://facebook.com/wolfdetrix">Facebook</a>
                 </li>
                 <li>
-                    TheDJList: <a href="http://thedjlist.com/djs/WOLF_DETRIX/">djs/WOLF_DETRIX/</a>
+                    <a href="http://soundcloud.com/wolfdetrix">SoundCloud</a>
                 </li>
                 <li>
-                    Beatport: <a href="http://dj.beatport.com/wolfdetrix">dj.beatport.com/wolfdetrix</a>
+                    <a href="http://thedjlist.com/djs/WOLF_DETRIX/">TheDJList</a>
+                </li>
+                <li>
+                    <a href="http://dj.beatport.com/wolfdetrix">Beatport</a>
                 </li>
             </ul>
         </div>
