--- a/index.html
+++ b/index.html
@@ -30,22 +30,19 @@
         <div>
             <ul>
                 <li>
-                    Follow Me:
+                    <strong><a href="http://twitter.com/wolfdetrix">Twitter</a></strong>
                 </li>
                 <li>
-                    <a href="http://twitter.com/wolfdetrix">Twitter</a>
+                    <strong><a href="http://facebook.com/wolfdetrix">Facebook</a></strong>
                 </li>
                 <li>
-                    <a href="http://facebook.com/wolfdetrix">Facebook</a>
+                    <strong><a href="http://soundcloud.com/wolfdetrix">SoundCloud</a></strong>
                 </li>
                 <li>
-                    <a href="http://soundcloud.com/wolfdetrix">SoundCloud</a>
+                    <strong><a href="http://thedjlist.com/djs/WOLF_DETRIX/">TheDJList</a></strong>
                 </li>
                 <li>
-                    <a href="http://thedjlist.com/djs/WOLF_DETRIX/">TheDJList</a>
-                </li>
-                <li>
-                    <a href="http://dj.beatport.com/wolfdetrix">Beatport</a>
+                    <strong><a href="http://dj.beatport.com/wolfdetrix">Beatport</a></strong>
                 </li>
             </ul>
         </div>
