--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Wolf Detrix</title>
-    <meta name="description" content="DJ/Producer">
+    <meta name="description" content="Wolf Detrix is Washington DC's best when it comes to House, Electro, and Tech House.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/normalize.min.css">
