--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <footer id="footer" class="content-wrapper">
         <div>
             <ul>
+                <li><iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/124867049&amp;color=ff6600&amp;auto_play=false&amp;show_artwork=true"></iframe>
+                </li>
                 <li>
                     <strong><a href="http://twitter.com/wolfdetrix">Twitter</a></strong>
                 </li>
