--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div>
             <ul>
                 <li>
-                    <strong><a href="http://twitter.com/wolfdetrix">Twitter</a></strong>
+                    <a href="http://twitter.com/wolfdetrix"><strong>Twitter</strong></a>
                 </li>
                 <li>
                     <strong><a href="http://facebook.com/wolfdetrix">Facebook</a></strong>
@@ -45,6 +45,7 @@
                     <strong><a href="http://dj.beatport.com/wolfdetrix">Beatport</a></strong>
                 </li>
             </ul>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/124867049&amp;color=ff6600&amp;auto_play=false&amp;show_artwork=true"></iframe>
         </div>
     </footer>
 
