--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <strong><a href="http://dj.beatport.com/wolfdetrix">Beatport</a></strong>
                 </li>
             </ul>
-            <object height="81" width="100%"><param name="movie" value="https://player.soundcloud.com/player.swf?url=https%3A//api.soundcloud.com/tracks/129403985&amp;color=ff6600&amp;auto_play=false&amp;show_artwork=false&amp;show_playcount=true&amp;show_comments=true"></param><param name="allowscriptaccess" value="always"></param><embed allowscriptaccess="always" src="https://player.soundcloud.com/player.swf?url=https%3A//api.soundcloud.com/tracks/129403985&amp;color=ff6600&amp;auto_play=false&amp;show_artwork=false&amp;show_playcount=true&amp;show_comments=true" type="application/x-shockwave-flash" width="30%" height="81"></embed></object><span><a href="https://soundcloud.com/wolfdetrix/nye-2014-with-wolf-detrix">NYE 2014 With Wolf Detrix</a> by <a href="https://soundcloud.com/wolfdetrix">WolfDetrix</a></span>
+            <iframe width="30%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/129403985&amp;color=ff6600&amp;auto_play=false&amp;show_artwork=false"></iframe>
         </div>
     </footer>
 
