--- a/index.html
+++ b/index.html
@@ -16,49 +16,106 @@
 
 <body>
 
-    <header id="header" class="content-wrapper">
-        <div>
-            <h1>
-                Wolf<br>
-                Detrix
-            </h1>
-            <h2>DJ/Producer</h2>
+<div class="wrapper">
+    <div class="main">
+        <div class="content header">
+            <img src="images/wolf-detrix.png" alt="Wolf Detrix">
         </div>
-    </header>
-
-    <footer id="footer" class="content-wrapper">
-        <div>
-            <ul>
-                <li>
-                    <a href="http://twitter.com/wolfdetrix"><strong>Twitter</strong></a>
+        <div class="stripes"></div>
+        <div class="content social">
+            <ul class="social-icons">
+                <li class="content-box">
+                    <a href="http://facebook.com/wolfdetrix">
+                        <img src="images/facebook.png" alt="Facebook">
+                    </a>
                 </li>
-                <li>
-                    <strong><a href="http://facebook.com/wolfdetrix">Facebook</a></strong>
+                <li class="content-box">
+                    <a href="http://www.youtube.com/wolfdetrix">
+                        <img src="images/youtube.png" alt="YouTube">
+                    </a>
                 </li>
-                <li>
-                    <strong><a href="http://soundcloud.com/wolfdetrix">SoundCloud</a></strong>
+                <li class="content-box">
+                    <a href="http://twitter.com/wolfdetrix">
+                        <img src="images/twitter.png" alt="Twitter">
+                    </a>
                 </li>
-                <li>
-                    <strong><a href="http://thedjlist.com/djs/WOLF_DETRIX/">TheDJList</a></strong>
+                <li class="content-box">
+                    <a href="http://thedjlist.com/djs/WOLF_DETRIX/">
+                        <img src="images/djlist.png" alt="DJ List">
+                    </a>
                 </li>
-                <li>
-                    <strong><a href="http://dj.beatport.com/wolfdetrix">Beatport</a></strong>
+                <li class="content-box">
+                    <a href="http://soundcloud.com/wolfdetrix">
+                        <img src="images/soundcloud.png" alt="Soundcloud">
+                    </a>
+                </li>
+                <li class="content-box">
+                    <a href="http://dj.beatport.com/wolfdetrix">
+                        <img src="images/beatport.png" alt="Beatport">
+                    </a>
+                </li>
+                <li class="content-box">
+                    <a href="http://www.songkick.com/artists/7671659-wolf-detrix">
+                        <img src="images/songkick.png" alt="Songkick">
+                    </a>
+                </li>
+                <li class="content-box">
+                    <a href="http://instagram.com/wolfdetrix">
+                        <img src="images/instagram.png" alt="Instagram">
+                    </a>
                 </li>
             </ul>
-            <iframe width="30%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/129403985&amp;color=ff6600&amp;auto_play=false&amp;show_artwork=false"></iframe>
         </div>
-    </footer>
+        <div class="stripes"></div>
+        <section class="content content-box events">
+            <div class="events-header">
+                <span class="events-date">Date</span>
+                <span class="events-venue">Venue</span>
+                <span class="events-location">Location</span>
+            </div>
+            <div class="events-body">
+                <div class="events-event">
+                    <span class="events-date">1/28/14</span>
+                    <span class="events-venue">Opera</span>
+                    <span class="events-location">Washington, DC</span>
+                </div>
+            </div>
+            <div class="events-more">
+                <a class="events-more-songkick" href="http://www.songkick.com/artists/7671659-wolf-detrix">
+                    <img src="images/songkick-long.png" alt="Songkick">
+                    for full schedule
+                </a>
+            </div>
+        </section>
+        <div class="content content-box player">
+            <iframe width="100%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/46762357&amp;color=ff5500&amp;auto_play=false&amp;show_artwork=false"></iframe>
+        </div>
+    </div>
+    <div class="side">
+    </div>
+</div>
 
-    <img class="background-full" src="images/wolf-bg.jpg" />
+<div class="background">
+    <div class="booking-info">
+        <span class="booking-title">
+            <span>Booking Info</span>
+        </span>
+        <br>
+        <span class="booking-email">
+            <span>booking@wolfdetrix.com</span>
+        </span>
+    </div>
+    <img src="images/background.jpg">
+</div>
 
-    <script>
-        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='//www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-        ga('create','UA-46457416-1');ga('send','pageview');
-    </script>
+<script>
+    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+    e.src='//www.google-analytics.com/analytics.js';
+    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+    ga('create','UA-46457416-1');ga('send','pageview');
+</script>
 
 </body>
 
