content and styles

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             </div>
             <div class="events-body">
                 <div class="events-event">
-                    <span class="events-date">1/28/14</span>
-                    <span class="events-venue">Opera</span>
-                    <span class="events-location">Washington, DC</span>
+                    <span class="events-date">Coming Soon</span>
+                    <span class="events-venue"></span>
+                    <span class="events-location"></span>
                 </div>
             </div>
             <div class="events-more">
@@ -102,7 +102,7 @@
         </span>
         <br>
         <span class="booking-email">
-            <span>booking@wolfdetrix.com</span>
+            <a href="mailto:booking@wolfdetrix.com">booking@wolfdetrix.com</a>
         </span>
     </div>
     <img src="images/background.jpg">
