added psds, added favicons, fixed mobile styles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <meta name="description" content="Wolf Detrix is Washington DC's best when it comes to House, Electro, and Tech House.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="apple-touch-icon" href="touchicon.png">
+    <link rel="icon" href="favicon.png">
+    <!--[if IE]>
+        <link rel="shortcut icon" href="favicon.ico">
+    <![endif]-->
+
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
@@ -25,42 +31,42 @@
         <div class="content social">
             <ul class="social-icons">
                 <li class="content-box">
-                    <a href="http://facebook.com/wolfdetrix">
+                    <a href="http://facebook.com/wolfdetrix" target="_blank">
                         <img src="images/facebook.png" alt="Facebook">
                     </a>
                 </li>
                 <li class="content-box">
-                    <a href="http://www.youtube.com/wolfdetrix">
+                    <a href="http://www.youtube.com/wolfdetrix" target="_blank">
                         <img src="images/youtube.png" alt="YouTube">
                     </a>
                 </li>
                 <li class="content-box">
-                    <a href="http://twitter.com/wolfdetrix">
+                    <a href="http://twitter.com/wolfdetrix" target="_blank">
                         <img src="images/twitter.png" alt="Twitter">
                     </a>
                 </li>
                 <li class="content-box">
-                    <a href="http://thedjlist.com/djs/WOLF_DETRIX/">
+                    <a href="http://thedjlist.com/djs/WOLF_DETRIX/" target="_blank">
                         <img src="images/djlist.png" alt="DJ List">
                     </a>
                 </li>
                 <li class="content-box">
-                    <a href="http://soundcloud.com/wolfdetrix">
+                    <a href="http://soundcloud.com/wolfdetrix" target="_blank">
                         <img src="images/soundcloud.png" alt="Soundcloud">
                     </a>
                 </li>
                 <li class="content-box">
-                    <a href="http://dj.beatport.com/wolfdetrix">
+                    <a href="http://dj.beatport.com/wolfdetrix" target="_blank">
                         <img src="images/beatport.png" alt="Beatport">
                     </a>
                 </li>
                 <li class="content-box">
-                    <a href="http://www.songkick.com/artists/7671659-wolf-detrix">
+                    <a href="http://www.songkick.com/artists/7671659-wolf-detrix" target="_blank">
                         <img src="images/songkick.png" alt="Songkick">
                     </a>
                 </li>
                 <li class="content-box">
-                    <a href="http://instagram.com/wolfdetrix">
+                    <a href="http://instagram.com/wolfdetrix" target="_blank">
                         <img src="images/instagram.png" alt="Instagram">
                     </a>
                 </li>
@@ -81,7 +87,7 @@
                 </div>
             </div>
             <div class="events-more">
-                <a class="events-more-songkick" href="http://www.songkick.com/artists/7671659-wolf-detrix">
+                <a class="events-more-songkick" href="http://www.songkick.com/artists/7671659-wolf-detrix" target="_blank">
                     <img src="images/songkick-long.png" alt="Songkick">
                     for full schedule
                 </a>
@@ -90,8 +96,6 @@
         <div class="content content-box player">
             <iframe width="100%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/46762357&amp;color=ff5500&amp;auto_play=false&amp;show_artwork=false"></iframe>
         </div>
-    </div>
-    <div class="side">
     </div>
 </div>
 
