--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
             </div>
             <div class="events-body">
                 <div class="events-event">
-                    <span class="events-date">Coming Soon</span>
-                    <span class="events-venue"></span>
-                    <span class="events-location"></span>
+                    <span class="events-date">March 14</span>
+                    <span class="events-venue">Opera Ultra Lounge</span>
+                    <span class="events-location">Washington, DC</span>
                 </div>
             </div>
             <div class="events-more">
