Added new Tour Date

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
             </div>
             <div class="events-body">
                 <div class="events-event">
+                    <span class="events-date">April 18</span>
+                    <span class="events-venue">Opera Ultra Lounge</span>
+                    <span class="events-location">Washington, DC</span>
+                </div>
+                <div class="events-event">
                     <span class="events-date">March 14</span>
                     <span class="events-venue">Opera Ultra Lounge</span>
                     <span class="events-location">Washington, DC</span>
