--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
                 <span class="events-location">Location</span>
             </div>
             <div class="events-body">
-                <div class="events-event">
+                 <div class="events-event">
+                    <span class="events-date">May 3</span>
+                    <span class="events-venue">Opera Ultra Lounge</span>
+                    <span class="events-location">Washington, DC</span>
+                </div>
+                 <div class="events-event">
                     <span class="events-date">April 19</span>
                     <span class="events-venue">Bar Dupont</span>
                     <span class="events-location">Washington, DC</span>
