--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="events-body">
                  <div class="events-event">
                     <span class="events-date">May 31</span>
-                    <span class="events-venue">Maté lounge</span>
+                    <span class="events-venue">Maté Lounge</span>
                     <span class="events-location">Washington, DC</span>
                 </div>
                 <div class="events-event">
