--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
             </div>
             <div class="events-body">
                 <div class="events-event">
+                    <span class="events-date">December 31</span>
+                    <span class="events-venue">Bar Dupont</span>
+                    <span class="events-location">Washington, DC</span>
+            </div>
+            <div class="events-body">
+                <div class="events-event">
                     <span class="events-date">November 21</span>
                     <span class="events-venue">HEIST</span>
                     <span class="events-location">Washington, DC</span>
