Gumpertinger Bierzelt 2015 Add

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Wolf Detrix</title>
-    <meta name="description" content="Wolf Detrix is Washington DC's best when it comes to House, Electro, and Tech House.">
+    <meta name="description" content="Wolf Detrix is Washington DC's best when it comes to House, Electro, and Deep House.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="touchicon.png">
@@ -78,6 +78,12 @@
                 <span class="events-date">Date</span>
                 <span class="events-venue">Venue</span>
                 <span class="events-location">Location</span>
+            </div>
+            <div class="events-body">
+                <div class="events-event">
+                    <span class="events-date">August 14</span>
+                    <span class="events-venue">Gumpertinger Bierzelt 2015</span>
+                    <span class="events-location">Seekirchen, Austria</span>
             </div>
             <div class="events-body">
                 <div class="events-event">
