--- a/index.html
+++ b/index.html
@@ -81,9 +81,14 @@
         </div>
             <div class="events-body">
                 <div class="events-event">
+                    <span class="events-date">September 12</span>
+                    <span class="events-venue">Lifestyle</span>
+                    <span class="events-location">Seekirchen, AT</span>
+            </div>
+                <div class="events-event">
                     <span class="events-date">August 14</span>
                     <span class="events-venue">Gumpertinger Bierzelt 2015</span>
-                    <span class="events-location">Seekirchen, AT</span>
+                    <span class="events-location">Seekirchen, AT</span>            
             </div>
                 <div class="events-event">
                     <span class="events-date">December 31</span>
