Added Tour Dates Dates

--- a/index.html
+++ b/index.html
@@ -81,14 +81,34 @@
         </div>
             <div class="events-body">
                 <div class="events-event">
-                    <span class="events-date">September 12</span>
+                    <span class="events-date">May 20</span>
+                    <span class="events-venue">Hamabash Festival</span>
+                    <span class="events-location">Desselbrunn, AT</span>
+            </div>
+                <div class="events-event">
+                    <span class="events-date">April 30</span>
                     <span class="events-venue">Lifestyle</span>
                     <span class="events-location">Seekirchen, AT</span>
             </div>
                 <div class="events-event">
-                    <span class="events-date">August 14</span>
-                    <span class="events-venue">Gumpertinger Bierzelt 2015</span>
-                    <span class="events-location">Seekirchen, AT</span>            
+                    <span class="events-date">March 23</span>
+                    <span class="events-venue">City Beat</span>
+                    <span class="events-location">Salzburg, AT</span>  
+            </div>
+                <div class="events-event">
+                    <span class="events-date">March 11</span>
+                    <span class="events-venue">Auhofalm</span>
+                    <span class="events-location">St. Johann in Pongau, AT</span>
+            </div>
+                <div class="events-event">
+                    <span class="events-date">Feburary 13</span>
+                    <span class="events-venue">Illumination Clubbing</span>
+                    <span class="events-location">Henndorf, AT</span> 
+            </div>
+                <div class="events-event">
+                    <span class="events-date">September 12</span>
+                    <span class="events-venue">Lifestyle</span>
+                    <span class="events-location">Seekirchen, AT</span>
             </div>
                 <div class="events-event">
                     <span class="events-date">December 31</span>
@@ -99,6 +119,11 @@
                     <span class="events-date">November 21</span>
                     <span class="events-venue">HEIST</span>
                     <span class="events-location">Washington, DC</span>
+            </div>
+                <div class="events-event">
+                    <span class="events-date">October 18</span>
+                    <span class="events-venue">Foreverland</span>
+                    <span class="events-location">Wrightsville, PA</span>
             </div>
                 <div class="events-event">
                     <span class="events-date">June 7</span>
@@ -129,7 +154,21 @@
                     <span class="events-date">March 14</span>
                     <span class="events-venue">Opera Ultra Lounge</span>
                     <span class="events-location">Washington, DC</span>
-                </div>
+            </div>
+                <div class="events-event">
+                    <span class="events-date">December 31</span>
+                    <span class="events-venue">Bar Dupont</span>
+                    <span class="events-location">Washington, DC</span>
+            </div>
+                <div class="events-event">
+                    <span class="events-date">December 21</span>
+                    <span class="events-venue">Vanity</span>
+                    <span class="events-location">Philadelphia, PA</span>
+            </div>
+                <div class="events-event">
+                    <span class="events-date">December 31</span>
+                    <span class="events-venue">Bar Dupont</span>
+                    <span class="events-location">Washington, DC</span>
             </div>
             <div class="events-more">
                 <a class="events-more-songkick" href="http://www.songkick.com/artists/7671659-wolf-detrix" target="_blank">
