added electric love

--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
         </div>
             <div class="events-body">
                 <div class="events-event">
+                    <span class="events-date">July 6</span>
+                    <span class="events-venue">Electric Love Festival 2016</span>
+                    <span class="events-location">Salzburg, AT</span>
+        </div>
+            <div class="events-body">
+                <div class="events-event">
                     <span class="events-date">May 20</span>
                     <span class="events-venue">Hamabash Festival</span>
                     <span class="events-location">Desselbrunn, AT</span>
