Added Certified Domain Verfication Seal to site
<span id="cdSiteSeal1"><script type="text/javascript" src="//tracedseals.starfieldtech.com/siteseal/get?scriptId=cdSiteSeal1&amp;cdSealType=Seal1&amp;sealId=55e4ye7y7mb73015039421c5c8ead25pcbky7mb7355e4ye78c45d7e623cdd503"></script></span>

--- a/index.html
+++ b/index.html
@@ -209,7 +209,10 @@
     r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
     ga('create','UA-46457416-1');ga('send','pageview');
 </script>
-
+ 
+<span id="cdSiteSeal1"><script type="text/javascript" src="//tracedseals.starfieldtech.com/siteseal/get?scriptId=cdSiteSeal1&amp;cdSealType=Seal1&amp;sealId=55e4ye7y7mb73015039421c5c8ead25pcbky7mb7355e4ye78c45d7e623cdd503">
+</script></span>
+    
 </body>
 
 </html>
